fixed z-index issues

--- a/src/components/NotificationModal.css
+++ b/src/components/NotificationModal.css
@@ -5,7 +5,7 @@
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 100;
 }
 
 .page-width {
@@ -27,7 +27,7 @@
     width:400px;
     margin: auto;
     max-width: 1000px;
-    z-index: 2;
+    z-index: 120;
 }
 
 .modal-header {
